# hacker-tracker

./: LICENSE  fourmolu.yaml  hacker-tracker.cabal  stack.yaml
align-tracks/: Main.hs
app/: Main.hs
lib/: Midi.hs  Oops.hs  Parser.hs  Player.hs  Synch.hs  TUI.hs  Time.hs  Types.hs  Utils.hs
lib/Player/: Config.hs  Schedule.hs
lib/Synch/: RefStore.hs  System.hs
lib/Track/: AST.hs  Check.hs  Parser.hs  PrettyPrinter.hs  Schedule.hs  Types.hs
tests/: CheckSpec.hs  ParserSpec.hs  ScheduleSpec.hs  SynchSpec.hs  test-track.md
