cabal-version:      3.0
name:               hacker-tracker
version:            0.1
synopsis:           Music tracker for the hacker
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Emil Axelsson
maintainer:         78emil@gmail.com
copyright:          Copyright (c) 2025, Emil Axelsson
category:           Sound
build-type:         Simple

common extensions
    default-language: Haskell2010
    default-extensions:
        DeriveAnyClass
        DeriveGeneric
        DerivingStrategies
        DerivingVia
        DuplicateRecordFields
        ExplicitForAll
        GeneralizedNewtypeDeriving
        ImportQualifiedPost
        LambdaCase
        NamedFieldPuns
        NoImplicitPrelude
        NumericUnderscores
        OverloadedLabels
        OverloadedStrings
        RankNTypes
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeApplications
        TypeFamilies

common warnings
    ghc-options:
        -Weverything
        -Wno-all-missed-specialisations
        -Wno-implicit-prelude
        -Wno-missing-export-lists
        -Wno-missing-import-lists
        -Wno-missing-kind-signatures
        -Wno-missing-local-signatures
        -Wno-missing-role-annotations
        -Wno-missing-safe-haskell-mode
        -Wno-safe
        -Wno-unsafe

library
    import:           warnings
    import:           extensions
    hs-source-dirs:   lib

    exposed-modules:
        Midi
        Oops
        Player
        Player.Config
        Player.Schedule
        Synch.RefStore
        Synch.System
        Synch
        Time
        Track.Parser
        Track.PrettyPrinter
        Track.Types
        TUI
        Utils

    build-depends:
        base < 5,
        brick,
        cmark,
        nonempty-zipper,
        protolude,
        RtMidi,
        text,
        time,
        unordered-containers,
        vector,
        vty,
        vty-unix,

executable hacker-tracker
    import:           warnings
    import:           extensions
    hs-source-dirs:   app
    main-is:          Main.hs
    ghc-options:      -Werror -threaded

    build-depends:    base,
                      brick,
                      hacker-tracker,
                      protolude,
                      RtMidi,
                      text,
                      unordered-containers,

executable align-tracks
    import:           warnings
    import:           extensions
    hs-source-dirs:   align-tracks
    main-is:          Main.hs
    ghc-options:      -Werror

    build-depends:    cmark,
                      base,
                      filepath,
                      hacker-tracker,
                      protolude,
                      text,
                      unordered-containers,

test-suite tests
    import:           warnings
    import:           extensions
    type:             exitcode-stdio-1.0
    hs-source-dirs:   tests
    main-is:          Spec.hs

    other-modules:    ParserSpec
                      SynchSpec

    build-depends:    cmark,
                      hacker-tracker,
                      hspec,
                      protolude,
                      QuickCheck,
                      text,
